# opensampler

./: .gitignore  .gitmodules  LICENSE  README.md
osmpsdk/: MakeFile
osmpsdk/buildtools/: main.c
osmpsdk/converter/: main.c
scripts/python/: buildfile.py  sfz2yaml.py
software/cli/src/: main.cpp
software/plugins/: CMakeLists.txt
